# json-placeholder-elt

./: .gitignore  Makefile  README.md  config.yaml  docker-compose-yaml  docker-compose.yaml  dockerfile  pyproject.toml
db/: init.sql
src/etl_pipeline/: extractor.py  ingestor.py  logger.py  main.py  metrics.py  models.py  transform.py
tests/: test_extractor.py  test_ingestor.py  test_transform.py
